# Zircon

./: .bazelrc  WORKSPACE
backend/: BUILD.bazel
crawler/: .env.example  BUILD.bazel  Cargo.toml
crawler/migrations/: 1_setup.sql
crawler/src/: main.rs
crawler/src/mode/: anime.rs  mod.rs
crawler/src/utils/: mod.rs  wiki_parser.rs
