[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "rustls-tls"
] }
dotenv = { version = "0.15.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
