[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "rustls-tls"
] }
dotenv = { version = "0.15.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate"
] }
tracing-unwrap = { version = "1.0" }
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
nom = { version = "8.0" }

[dev-dependencies]
pretty_assertions = "1.4"
regex = "1.12"
